--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -207,3 +207,10 @@ body {
   border-radius: 7px;
   /* background-color: #17a2b8; */
 }
+.game-pgn {
+  width: 337px;
+  color: black;
+  background-color: white;
+  padding-left: 5px;
+  padding-right: 5px;
+}
