--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -214,3 +214,14 @@ body {
   padding-left: 5px;
   padding-right: 5px;
 }
+
+.player_name {
+  margin-top: 8px;
+  font-size: 0.9rem;
+  font-weight: 500;
+  height: 40px;
+  line-height: 30px;
+  padding: 5px 10px;
+  text-align: left;
+  width: 200px;
+}
